<resources>
    <string name="app_name">Login</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="error_message">Login Failed</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="email">Email</string>
    <string name="user_added">User added</string>
    <string name="register">Register</string>
    <string name="added_details_of">Added details of %1$s</string>
    <string name="please_enter_the_details">Please enter the details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_refresh_quotes">Refresh Quotes</string>
    <string name="title_cars">Cars</string>
    <string name="logout">Logout</string>
    <string name="primary">Primary</string>
</resources>